# free_llms

./: Dockerfile  LICENSE  README.md  makefile  pyproject.toml  test.py
.github/workflows/: linter.yml  makefile.yml
examples/: claude.py  gpt.py  langchain_model.py  mistral.py  preplexity.py
src/free_llms/: callbacks.py  constants.py  langchain.py  langchain_model.py  models.py  utils.py
tests/unit_tests/: test_models.py
